--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spacesvr",
-  "version": "2.10.6",
+  "name": "spacesvr-websessions",
+  "version": "0.0.0",
   "private": true,
   "description": "A standardized reality for future of the 3D Web",
   "keywords": [
@@ -16,10 +16,10 @@
     "three js"
   ],
   "license": "MIT",
-  "homepage": "https://spacesvr.io",
+  "homepage": "https://websessions.co/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/spacesvr/spacesvr.git"
+    "url": "git+https://github.com/websessions/spacesvr-websessions"
   },
   "author": {
     "name": "alex shortt",
