--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nipplejs": "0.8.1",
     "node-fetch": "^2.6.1",
     "peerjs": "^1.4.6",
+    "posthog-js": "^1.43.1",
     "react-device-detect": "^1.13.1",
     "react-error-boundary": "^3.1.4"
   },
